K8S/archive_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archive-dep
spec:
  selector:
    matchLabels:
      app: archiveservice
  template:
    metadata:
      labels:
        app: archiveservice
    spec:
      containers:
        - name: archiveservice
          image: wjarod/archive-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: archive-service
spec:
  type: ClusterIP
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: archive-service-server
spec:
  type: NodePort
  selector:
    app: archiveservice
  ports:
    - name: archiveservice
      protocol: TCP
      port: 80
      targetPort: 80
