K8S/user_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-dep
spec:
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: wjarod/user-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 80  
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-server
spec:
  type: NodePort
  selector:
    app: userservice
  ports:
    - name: userservice
      protocol: TCP
      port: 80
      targetPort: 80
